--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(Meter-test)
 enable_language(CXX)
 
 if(NOT (CMAKE_CXX_COMPILER_ID MATCHES MSVC)) #GCC
-  set(CMAKE_CXX_FLAGS "-std=c++17 -Werror -fsanitize=address,undefined -Wall -Wno-mismatched-tags -Wno-sign-compare")
+  set(CMAKE_CXX_FLAGS "-std=c++2a -Werror -fsanitize=address,undefined -Wall -Wno-mismatched-tags -Wno-sign-compare")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage -fexceptions -fuse-ld=gold -pthread")
   set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g3")
   set(CMAKE_CXX_FLAGS_RELEASE "-O3")
@@ -38,14 +38,22 @@ add_library(googletest
   ${GOOGLETEST_SOURCES}
 )
 
+add_custom_command(
+  OUTPUT ${PROJECT_SOURCE_DIR}/Source/Tokenizer.cc
+  DEPENDS ${PROJECT_SOURCE_DIR}/Source/Tokenizer.re
+  COMMAND re2c --input custom -o "Tokenizer.cc" Tokenizer.re
+  WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/Source"
+)
+
 file(GLOB testsources
-	#${GOOGLETEST_SOURCES}
   ${PROJECT_SOURCE_DIR}/Tests/*.cc
   ${PROJECT_SOURCE_DIR}/Source/*.cc
 )
 
 add_executable(tests
   ${testsources}
+  ${GOOGLETEST_SOURCES}
+  ${PROJECT_SOURCE_DIR}/Source/Tokenizer.cc
 )
 
 target_link_libraries(tests
