--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
   - mkdir build
   - pushd build
   - CC=gcc-9 CXX=g++-9 cmake ..
-  - make VERBOSE=1
+  - make VERBOSE=1 -DCMAKE_BUILD_TYPE=Debug
   # Todo: export these test results
-  - ASAN_OPTIONS=detect_leaks=0 ./tests --gtest_output=xml:"tests.xml"
+  - kcov --coveralls-id=$TRAVIS_JOB_ID --include-pattern='Meter/Source' ./out tests --gtest_output=xml:"tests.xml"
   - popd
