--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,8 @@ project(Meter-test)
 
 enable_language(CXX)
 
-if(NOT (CMAKE_CXX_COMPILER_ID MATCHES MSVC)) #GCC
-  set(CMAKE_CXX_FLAGS "-std=c++2a -Werror -fsanitize=undefined -Wall -Wno-mismatched-tags -Wno-sign-compare")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage -fexceptions -fuse-ld=gold -pthread")
-  set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g3 -fprofile-arcs -ftest-coverage")
-  set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-endif()
-
 include_directories(
+  ${PROJECT_SOURCE_DIR}
   ${PROJECT_SOURCE_DIR}/Source
 )
 
@@ -38,27 +32,55 @@ add_library(googletest
   ${GOOGLETEST_SOURCES}
 )
 
-add_custom_command(
-  OUTPUT ${PROJECT_SOURCE_DIR}/Source/Tokenizer.cc
-  DEPENDS ${PROJECT_SOURCE_DIR}/Source/Tokenizer.re
-  COMMAND re2c -8 --input custom -o "Tokenizer.cc" Tokenizer.re
-  WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/Source"
-)
+set(imgui_backend_sources imgui_impl_glfw.cpp imgui_impl_opengl3.cpp)
+set(imgui_backend_headers imgui_impl_glfw.h   imgui_impl_opengl3.h)
 
-file(GLOB testsources
-  ${PROJECT_SOURCE_DIR}/Tests/*.cc
-  ${PROJECT_SOURCE_DIR}/Source/*.cc
-)
+foreach(file ${imgui_backend_sources} ${imgui_backend_headers})
+  configure_file(
+    ${PROJECT_SOURCE_DIR}/imgui/examples/${file}
+    ${PROJECT_SOURCE_DIR}/imgui/${file}
+    COPYONLY
+  )
+endforeach(file)
+
+file(GLOB med_sources ${PROJECT_SOURCE_DIR}/med/*.cc )
+file(GLOB imgui_sources_glob ${PROJECT_SOURCE_DIR}/imgui/*.cpp )
+set(imgui_sources ${imgui_sources_glob})
+
+foreach(file ${imgui_backend_sources})
+  set(imgui_sources ${imgui_sources} ${PROJECT_SOURCE_DIR}/imgui/${file})
+endforeach(file)
+
+file(GLOB meter_sources ${PROJECT_SOURCE_DIR}/Source/*.cc)
+file(GLOB test_sources ${PROJECT_SOURCE_DIR}/Tests/*.cc )
 
 add_executable(tests
-  ${testsources}
+  ${meter_sources}
+  ${test_sources}
   ${GOOGLETEST_SOURCES}
-  ${PROJECT_SOURCE_DIR}/Source/Tokenizer.cc
+)
+
+add_executable(med
+  ${meter_sources}
+  ${med_sources}
+  ${imgui_sources}
 )
 
 target_link_libraries(tests
   googletest
 )
+
+# -Wno-mismatched-tags -fuse-ld=gold
+
+target_compile_options(med PRIVATE -fno-exceptions -std=c++2a -Werror -fsanitize=undefined -Wall)
+target_link_options(med PRIVATE -fsanitize=undefined)
+target_link_libraries(med GL glfw GLEW)
+
+target_compile_options(tests PRIVATE -fexceptions -fprofile-arcs -ftest-coverage -pthread -std=c++2a -Werror -fsanitize=undefined -Wall -Wno-sign-compare)
+target_link_options(tests PRIVATE -pthread -fprofile-arcs -ftest-coverage -fsanitize=undefined)
+
+set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g3")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 include(CTest)
 enable_testing()
